third_party/WebKit/Source/core/frame/UseCounter.h
@@ -544,6 +544,9 @@ public:
         QuotedKeyframesRule = 572,
         SrcsetDroppedCandidate = 573,
 
+        WindowPostMessage = 574,
+        WindowPostMessageWithLegacyTargetOriginArgument = 575,
+
         // Add new features immediately above this line. Don't change assigned
         // numbers of any item, and don't reuse removed slots.
         // Also, run update_use_counter_feature_enum.py in chromium/src/tools/metrics/histograms/
